@@ -20,6 +20,7 @@ CHANGELOG
 * Add photographie into default attachments filetype
 * Map location combobox (Cities, Districts, Areas) are not shown if empty or disabled.
 * Add auto-generated docs at /admin/doc/
+* Nicer installation script output
 
 Installation script
 
